--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>IEEE Spokane Section - Eastern Washington</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
